Updated thumbnails for various images. Adjusted padding and margins.

--- a/projects/stepstoneisland.html
+++ b/projects/stepstoneisland.html
@@ -70,7 +70,7 @@
 
                     <div class="col col-lg-10" data-bs-spy="scroll" data-bs-target="#navbar-tableofcontents" data-bs-smooth-scroll="true" class="scrollspy-example-2" tabindex="0">
                         <div id="overview" class="container mb-3 pb-3">
-                            <div class="row">
+                            <div class="row mt-2">
                                 <h1>Stepstone Island</h1>
                             </div>
                             <div class="row py-3">
@@ -146,40 +146,40 @@
                                 </div>
                             </div>
 
-                            <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3 py-3 border-bottom">
+                            <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3 pt-3 pb-5 border-bottom">
                                 <div class="col">
                                     <a href="../images/projects/stepstoneisland/gallery_01.png" data-toggle="lightbox" data-gallery="main-gallery">
-                                        <img src="../images/projects/stepstoneisland/gallery_01.png" class="img-fluid rounded" alt="gallery_01.png">
+                                        <img src="../images/projects/stepstoneisland/thumbnails/thumbnail_square_gallery_01.png" class="img-fluid rounded" alt="gallery_01.png">
                                     </a>
                                 </div>
                                 <div class="col">
                                     <a href="../images/projects/stepstoneisland/gallery_02.png" data-toggle="lightbox" data-gallery="main-gallery">
-                                        <img src="../images/projects/stepstoneisland/gallery_02.png" class="img-fluid rounded" alt="gallery_02.png">
+                                        <img src="../images/projects/stepstoneisland/thumbnails/thumbnail_square_gallery_02.png" class="img-fluid rounded" alt="gallery_02.png">
                                     </a>
                                 </div>
                                 <div class="col">
                                     <a href="../images/projects/stepstoneisland/gallery_03.png" data-toggle="lightbox" data-gallery="main-gallery">
-                                        <img src="../images/projects/stepstoneisland/gallery_03.png" class="img-fluid rounded" alt="gallery_03.png">
+                                        <img src="../images/projects/stepstoneisland/thumbnails/thumbnail_square_gallery_03.png" class="img-fluid rounded" alt="gallery_03.png">
                                     </a>
                                 </div>
                                 <div class="col">
                                     <a href="../images/projects/stepstoneisland/gallery_04.png" data-toggle="lightbox" data-gallery="main-gallery">
-                                        <img src="../images/projects/stepstoneisland/gallery_04.png" class="img-fluid rounded" alt="gallery_04.png">
+                                        <img src="../images/projects/stepstoneisland/thumbnails/thumbnail_square_gallery_04.png" class="img-fluid rounded" alt="gallery_04.png">
                                     </a>
                                 </div>
                                 <div class="col">
                                     <a href="../images/projects/stepstoneisland/gallery_05.png" data-toggle="lightbox" data-gallery="main-gallery">
-                                        <img src="../images/projects/stepstoneisland/gallery_05.png" class="img-fluid rounded" alt="gallery_05.png">
+                                        <img src="../images/projects/stepstoneisland/thumbnails/thumbnail_square_gallery_05.png" class="img-fluid rounded" alt="gallery_05.png">
                                     </a>
                                 </div>
                                 <div class="col">
                                     <a href="../images/projects/stepstoneisland/gallery_06.png" data-toggle="lightbox" data-gallery="main-gallery">
-                                        <img src="../images/projects/stepstoneisland/gallery_06.png" class="img-fluid rounded" alt="gallery_06.png">
+                                        <img src="../images/projects/stepstoneisland/thumbnails/thumbnail_square_gallery_06.png" class="img-fluid rounded" alt="gallery_06.png">
                                     </a>
                                 </div>
                                 <div class="col">
                                     <a href="../images/projects/stepstoneisland/gallery_07.gif" data-toggle="lightbox" data-gallery="main-gallery">
-                                        <img src="../images/projects/stepstoneisland/gallery_07.gif" class="img-fluid rounded" alt="gallery_07.gif">
+                                        <img src="../images/projects/stepstoneisland/thumbnails/thumbnail_square_gallery_07.png" class="img-fluid rounded" alt="gallery_07.gif">
                                     </a>
                                 </div>
                             </div>
@@ -251,7 +251,7 @@
                                 </div>
                                 <div class="col">
                                     <a href="../images/projects/stepstoneisland/ideation_01.png" data-toggle="lightbox">
-                                        <img src="../images/projects/stepstoneisland/ideation_01.png" class="img-fluid mx-auto d-block rounded" alt="ideation_01" width="350"/>
+                                        <img src="../images/projects/stepstoneisland/thumbnails/thumbnail_ideation_01.png" class="img-fluid mx-auto d-block rounded" alt="ideation_01" width="350"/>
                                     </a>
                                         <figcaption class="figure-caption text-center py-3">Using data pulled from the Apple Health App for virtual currency.</figcaption>
                                 </div>
@@ -285,13 +285,13 @@
                             <div class="row row-cols-2 row-cols-lg-3 g-2 g-lg-3 py-3">
                                 <div class="col">
                                     <a href="../images/projects/stepstoneisland/gdd_prototype_01.png" data-toggle="lightbox" data-gallery="gdd-early-prototype-gallery">
-                                        <img src="../images/projects/stepstoneisland/gdd_prototype_01.png" class="img-fluid rounded" alt="gdd_prototype_01.png">
+                                        <img src="../images/projects/stepstoneisland/thumbnails/thumbnail_gdd_prototype_01.png" class="img-fluid rounded" alt="gdd_prototype_01.png">
                                     </a>
                                     <figcaption class="figure-caption text-center py-3">This is a screenshot of a prototype from Feb. 2017. In this version, events would be triggered depending on the data you pull from a FitBit wristband.</figcaption>
                                 </div>
                                 <div class="col">
                                     <a href="../images/projects/stepstoneisland/gdd_prototype_02.png" data-toggle="lightbox" data-gallery="gdd-early-prototype-gallery">
-                                        <img src="../images/projects/stepstoneisland/gdd_prototype_02.png" class="img-fluid rounded" alt="gdd_prototype_02.png">
+                                        <img src="../images/projects/stepstoneisland/thumbnails/thumbnail_gdd_prototype_02.png" class="img-fluid rounded" alt="gdd_prototype_02.png">
                                     </a>
                                     <figcaption class="figure-caption text-center py-3">This is a screenshot of a prototype from April. 2017. In this version, Players would have to tap on the cows to make them active and then they would collide with trees to make sticks, another virtual resource.</figcaption>
                                 </div>
