Updated display and padding for stepstone island and about pages

--- a/about.html
+++ b/about.html
@@ -47,9 +47,9 @@
         <main>
             <div class="row">
                 <div class="col-md-6 pb-3">
-                    <h1 class="display-1">Hello there!</h1>
-                    <h1 class="lead fw-medium pb-3">I'm Katie Pustolski, a game developer in Los Angeles, CA</h1>
-                    <div class="pb-2">
+                    <h1 class="display-3">Hello there!</h1>
+                    <h1 class="lead text-body-secondary">I'm Katie Pustolski, a game developer in Los Angeles, CA</h1>
+                    <div class="pt-4 pb-3">
                         <p>
                             My name is Katie and I am currently a software engineer in the
                             games industry. My personal projects tend to lean toward a cute, quirky, and at times
