--- a/projects/stepstoneisland.html
+++ b/projects/stepstoneisland.html
@@ -71,7 +71,7 @@
                     <div class="col col-lg-10" data-bs-spy="scroll" data-bs-target="#navbar-tableofcontents" data-bs-smooth-scroll="true" class="scrollspy-example-2" tabindex="0">
                         <div id="overview" class="container mb-3 pb-3">
                             <div class="row mt-2">
-                                <h1>Stepstone Island</h1>
+                                <div class="display-3 mb-3">Stepstone Island</div>
                             </div>
                             <div class="row py-3">
                                 <div class="col-md-6">
