--- a/projects/stepstoneisland.html
+++ b/projects/stepstoneisland.html
@@ -47,9 +47,10 @@
                 <div class="row">
                     <div class="col-2">
                         <div class="sticky-top d-none d-lg-block">
+                            <div class="fw-bold py-3">Page Contents</div>
                             <nav id="navbar-tableofcontents" class="flex-column align-items-stretch pe-4 border-end">
                                 <nav class="nav nav-pills flex-column">
-                                    <a class="nav-link mt-3" href="#overview">Stepstone Island</a>
+                                    <a class="nav-link" href="#overview">Stepstone Island</a>
                                     <a class="nav-link" href="#about">About</a>
                                     <a class="nav-link" href="#ideation">Ideation</a>
                                     <a class="nav-link" href="#game-design-and-development">Game Design & Development</a>
