Added 8th picture to stepstone island gallery

--- a/projects/stepstoneisland.html
+++ b/projects/stepstoneisland.html
@@ -183,6 +183,11 @@
                                         <img src="../images/projects/stepstoneisland/thumbnails/thumbnail_square_gallery_07.png" class="img-fluid rounded" alt="gallery_07.gif">
                                     </a>
                                 </div>
+                                <div class="col">
+                                    <a href="../images/projects/stepstoneisland/gallery_08.png" data-toggle="lightbox" data-gallery="main-gallery">
+                                        <img src="../images/projects/stepstoneisland/thumbnails/thumbnail_square_gallery_08.png" class="img-fluid rounded" alt="gallery_08.png">
+                                    </a>
+                                </div>
                             </div>
                         </div>
 
