--- a/index.html
+++ b/index.html
@@ -45,24 +45,63 @@
       <!-- Body -->
       <div class="container my-5">
         <main>
-            <div class="row row-cols-1 pb-3">
-                <h1>Header 1</h1>
-                <h3 class="text-body-secondary fw-light">Subitle</h3>
+            <div class="container my-5">
+                <div class="row row-cols-1 pb-3">
+                    <h1>Professional Projects</h1>
+                    <h3 class="text-body-secondary fw-light fst-italic ">Projects that I have contributed to at various studios.</h3>
                 </div>
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
-                    <a href="https://duckduckgo.com/">
-                    <div class="shadow card text-bg-dark">
-                    <!-- <img src="..." class="card-img" height="300px" alt="..."> -->
-                     <svg aria-label="Placeholder: Card image" class="bd-placeholder-img bd-placeholder-img-lg card-img" height="270" preserveAspectRatio="xMidYMid slice" role="img" width="100%" xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Card image</text></svg>
-                     <div class="card-img-overlay d-flex align-items-end">
-                        <div class="container">
-                            <p class="card-title fs-4">Card title</p>
-                            <p class="card-text fst-italic">Last updated 3 mins ago</p>
-                        </div>
-                        </div>
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                        <a href="projects/stepstoneisland.html">
+                            <div class="card shadow">
+                                <img src="images/thumbnails/thumbnail_projects_stepstone_island.png" class="card-img" alt="thumbnail_projects_stepstone_island.png">
+                            </div>
+                        </a>
                     </div>
-                    </a>
+                    <div class="col">
+                        <a href="projects/stepstoneisland.html">
+                            <div class="card shadow">
+                                <img src="images/thumbnails/thumbnail_projects_stepstone_island.png" class="card-img" alt="thumbnail_projects_stepstone_island.png">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a href="projects/stepstoneisland.html">
+                            <div class="card shadow">
+                                <img src="images/thumbnails/thumbnail_projects_stepstone_island.png" class="card-img" alt="thumbnail_projects_stepstone_island.png">
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container my-5">
+                <div class="row row-cols-1 pb-3">
+                    <h1>Personal Projects</h1>
+                    <h3 class="text-body-secondary fw-light fst-italic ">Old student projects, game jam games, etc.</h3>
+                </div>
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                        <a href="projects/stepstoneisland.html">
+                            <div class="card shadow">
+                                <img src="images/thumbnails/thumbnail_projects_stepstone_island.png" class="card-img" alt="thumbnail_projects_stepstone_island.png">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a href="projects/stepstoneisland.html">
+                            <div class="card shadow">
+                                <img src="images/thumbnails/thumbnail_projects_stepstone_island.png" class="card-img" alt="thumbnail_projects_stepstone_island.png">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a href="projects/stepstoneisland.html">
+                            <div class="card shadow">
+                                <img src="images/thumbnails/thumbnail_projects_stepstone_island.png" class="card-img" alt="thumbnail_projects_stepstone_island.png">
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </main>
