Moved page contents border class to different div

--- a/projects/stepstoneisland.html
+++ b/projects/stepstoneisland.html
@@ -46,9 +46,9 @@
             <main>
                 <div class="row">
                     <div class="col-2">
-                        <div class="sticky-top d-none d-lg-block">
+                        <div class="sticky-top d-none d-lg-block border-end">
                             <div class="fw-bold py-3">Page Contents</div>
-                            <nav id="navbar-tableofcontents" class="flex-column align-items-stretch pe-4 border-end">
+                            <nav id="navbar-tableofcontents" class="flex-column align-items-stretch pe-4">
                                 <nav class="nav nav-pills flex-column">
                                     <a class="nav-link" href="#overview">Stepstone Island</a>
                                     <a class="nav-link" href="#about">About</a>
