Updated index.html with new thumbnails

--- a/index.html
+++ b/index.html
@@ -54,21 +54,28 @@
                     <div class="col">
                         <a href="projects/stepstoneisland.html">
                             <div class="card shadow">
-                                <img src="images/thumbnails/thumbnail_projects_stepstone_island.png" class="card-img" alt="thumbnail_projects_stepstone_island.png">
+                                <img src="images/thumbnails/thumbnail_projects_marvel_snap.png" class="card-img" alt="thumbnail_projects_marvel_snap.png">
                             </div>
                         </a>
                     </div>
                     <div class="col">
                         <a href="projects/stepstoneisland.html">
                             <div class="card shadow">
-                                <img src="images/thumbnails/thumbnail_projects_stepstone_island.png" class="card-img" alt="thumbnail_projects_stepstone_island.png">
+                                <img src="images/thumbnails/thumbnail_projects_fictif.png" class="card-img" alt="thumbnail_projects_fictif.png">
                             </div>
                         </a>
                     </div>
                     <div class="col">
                         <a href="projects/stepstoneisland.html">
                             <div class="card shadow">
-                                <img src="images/thumbnails/thumbnail_projects_stepstone_island.png" class="card-img" alt="thumbnail_projects_stepstone_island.png">
+                                <img src="images/thumbnails/thumbnail_projects_potions_please.png" class="card-img" alt="thumbnail_projects_potions_please.png">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a href="projects/stepstoneisland.html">
+                            <div class="card shadow">
+                                <img src="images/thumbnails/thumbnail_projects_the_arcana.png" class="card-img" alt="thumbnail_projects_the_arcana.png">
                             </div>
                         </a>
                     </div>
