Added link to disco bear page in index.html

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         </a>
                     </div>
                     <div class="col">
-                        <a href="projects/stepstoneisland.html">
+                        <a href="projects/discobear.html">
                             <div class="card shadow">
                                 <img src="images/thumbnails/thumbnail_projects_stepstone_island.png" class="card-img" alt="thumbnail_projects_stepstone_island.png">
                             </div>
