Updated subtitle in index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="container my-5">
                 <div class="row row-cols-1 pb-3">
                     <h1>Professional Projects</h1>
-                    <h3 class="text-body-secondary fw-light fst-italic ">Projects that I have contributed to at various studios.</h3>
+                    <h3 class="text-body-secondary fw-light fst-italic ">Released projects that I have contributed to at various studios.</h3>
                 </div>
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                     <div class="col">
