Fixed a link to index.html in stepstone island page.

--- a/projects/stepstoneisland.html
+++ b/projects/stepstoneisland.html
@@ -20,7 +20,7 @@
         <div class="container">
             <header class="d-flex flex-wrap justify-content-center py-3 mb-4 mt-3 border-bottom">
                 <a
-                    href="index.html"
+                    href="../index.html"
                     class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                     <span class="fs-4 icon-link">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-controller" viewBox="0 0 16 16">
