Added thumbnails to disco bear page

--- a/projects/discobear.html
+++ b/projects/discobear.html
@@ -113,22 +113,22 @@
                             <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3 pt-3 pb-5 border-bottom">
                                 <div class="col">
                                     <a href="../images/projects/discobear/gallery_01.png" data-toggle="lightbox" data-gallery="main-gallery">
-                                        <img src="../images/projects/discobear/gallery_01.png" class="img-fluid rounded" alt="gallery_01.png">
+                                        <img src="../images/projects/discobear/thumbnails/thumbnail_gallery_01.png" class="img-fluid rounded" alt="gallery_01.png">
                                     </a>
                                 </div>
                                 <div class="col">
                                     <a href="../images/projects/discobear/gallery_02.png" data-toggle="lightbox" data-gallery="main-gallery">
-                                        <img src="../images/projects/discobear/gallery_02.png" class="img-fluid rounded" alt="gallery_02.png">
+                                        <img src="../images/projects/discobear/thumbnails/thumbnail_gallery_02.png" class="img-fluid rounded" alt="gallery_02.png">
                                     </a>
                                 </div>
                                 <div class="col">
                                     <a href="../images/projects/discobear/gallery_03.png" data-toggle="lightbox" data-gallery="main-gallery">
-                                        <img src="../images/projects/discobear/gallery_03.png" class="img-fluid rounded" alt="gallery_03.png">
+                                        <img src="../images/projects/discobear/thumbnails/thumbnail_gallery_03.png" class="img-fluid rounded" alt="gallery_03.png">
                                     </a>
                                 </div>
                                 <div class="col">
                                     <a href="../images/projects/discobear/gallery_04.png" data-toggle="lightbox" data-gallery="main-gallery">
-                                        <img src="../images/projects/discobear/gallery_04.png" class="img-fluid rounded" alt="gallery_04.png">
+                                        <img src="../images/projects/discobear/thumbnails/thumbnail_gallery_04.png" class="img-fluid rounded" alt="gallery_04.png">
                                     </a>
                                 </div>
                             </div>
@@ -234,18 +234,18 @@
                                 <div class="row">
                                     <div class="col">
                                         <a href="../images/projects/discobear/narrative_01.jpeg" data-toggle="lightbox" data-gallery="narrative-gallery">
-                                            <img src="../images/projects/discobear/narrative_01.jpeg" class="img-fluid rounded" alt="narrative_01.jpeg"/>
+                                            <img src="../images/projects/discobear/thumbnails/thumbnail_narrative_01.png" class="img-fluid rounded" alt="narrative_01.jpeg"/>
                                         </a>
                                     </div>
                                     <div class="col">
                                         <a href="../images/projects/discobear/narrative_03.png" data-toggle="lightbox" data-gallery="narrative-gallery">
-                                            <img src="../images/projects/discobear/narrative_03.png" class="img-fluid rounded" alt="narrative_03.png">
+                                            <img src="../images/projects/discobear/thumbnails/thumbnail_narrative_03.png" class="img-fluid rounded" alt="narrative_03.png">
                                         </a>
                                         <figcaption class="figure-caption text-center py-3">Early concepts of the characters (by Steven Sugar).</figcaption>
                                     </div>
                                     <div class="col">
                                         <a href="../images/projects/discobear/narrative_02.jpeg" data-toggle="lightbox" data-gallery="narrative-gallery">
-                                            <img src="../images/projects/discobear/narrative_02.jpeg" class="img-fluid rounded" alt="narrative_02.jpeg">
+                                            <img src="../images/projects/discobear/thumbnails/thumbnail_narrative_02.png" class="img-fluid rounded" alt="narrative_02.jpeg">
                                         </a>
                                         <figcaption class="figure-caption text-center py-3">Early concepts of the characters (by Steven Sugar).</figcaption>
                                     </div>
@@ -336,22 +336,22 @@
                                 <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3 pt-3 pb-5">
                                     <div class="col">
                                         <a href="../images/projects/discobear/presentation_01.jpeg" data-toggle="lightbox" data-gallery="presentation-gallery">
-                                            <img src="../images/projects/discobear/presentation_01.jpeg" class="img-fluid rounded" alt="presentation_01.jpeg">
+                                            <img src="../images/projects/discobear/thumbnails/thumbnail_presentation_01.png" class="img-fluid rounded" alt="presentation_01.jpeg">
                                         </a>
                                     </div>
                                     <div class="col">
                                         <a href="../images/projects/discobear/presentation_02.jpeg" data-toggle="lightbox" data-gallery="presentation-gallery">
-                                            <img src="../images/projects/discobear/presentation_02.jpeg" class="img-fluid rounded" alt="presentation_02.jpeg">
+                                            <img src="../images/projects/discobear/thumbnails/thumbnail_presentation_02.png" class="img-fluid rounded" alt="presentation_02.jpeg">
                                         </a>
                                     </div>
                                     <div class="col">
                                         <a href="../images/projects/discobear/presentation_03.jpeg" data-toggle="lightbox" data-gallery="presentation-gallery">
-                                            <img src="../images/projects/discobear/presentation_03.jpeg" class="img-fluid rounded" alt="presentation_03.jpeg">
+                                            <img src="../images/projects/discobear/thumbnails/thumbnail_presentation_03.png" class="img-fluid rounded" alt="presentation_03.jpeg">
                                         </a>
                                     </div>
                                     <div class="col">
                                         <a href="../images/projects/discobear/presentation_04.jpeg" data-toggle="lightbox" data-gallery="presentation-gallery">
-                                            <img src="../images/projects/discobear/presentation_04.jpeg" class="img-fluid rounded" alt="presentation_04.jpeg">
+                                            <img src="../images/projects/discobear/thumbnails/thumbnail_presentation_04.png" class="img-fluid rounded" alt="presentation_04.jpeg">
                                         </a>
                                     </div>
                                 </div>
