Added Lindolpho's Box of Ephemera thumbnail to index.html
* Also switched Disco Bear and Stepstone island cards

--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
                     <div class="col">
                         <a href="projects/stepstoneisland.html">
                             <div class="card shadow">
+                                <img src="images/thumbnails/thumbnail_projects_lindolpho_box_of _ephemera.png" class="card-img" alt="thumbnail_projects_stepstone_island.png">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a href="projects/stepstoneisland.html">
+                            <div class="card shadow">
                                 <img src="images/thumbnails/thumbnail_projects_stepstone_island.png" class="card-img" alt="thumbnail_projects_stepstone_island.png">
                             </div>
                         </a>
@@ -99,13 +106,6 @@
                         <a href="projects/discobear.html">
                             <div class="card shadow">
                                 <img src="images/thumbnails/thumbnail_projects_disco_bear.png" class="card-img" alt="thumbnail_projects_stepstone_island.png">
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col">
-                        <a href="projects/stepstoneisland.html">
-                            <div class="card shadow">
-                                <img src="images/thumbnails/thumbnail_projects_stepstone_island.png" class="card-img" alt="thumbnail_projects_stepstone_island.png">
                             </div>
                         </a>
                     </div>
