Updated link to disco bear credits text file

--- a/projects/discobear.html
+++ b/projects/discobear.html
@@ -266,7 +266,7 @@
                                     <div>
                                         <ul>
                                             <li><a href="https://soundcloud.com/spiralbill/sets/disco-bear" class="text-decoration-none">Listen to Bill's music for Disco Bear here!</a></li>
-                                            <li><a href="#" class="text-decoration-none">Download a txt file with a list of sound effects and image files used here.</a></li>
+                                            <li><a href="textfiles/disco-bear-credits.txt" class="text-decoration-none">See a txt file with a list of sound effects and image files used here.</a></li>
                                         </ul>
                                     </div>
                                 </div>
