Added duos project card. Updated alt. image text

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
                 </div>
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                     <div class="col">
-                        <a href="projects/stepstoneisland.html">
+                        <a href="#">
                             <div class="card shadow">
-                                <img src="images/thumbnails/thumbnail_projects_lindolpho_box_of _ephemera.png" class="card-img" alt="thumbnail_projects_stepstone_island.png">
+                                <img src="images/thumbnails/thumbnail_projects_lindolpho_box_of_ephemera.png" class="card-img" alt="thumbnail_projects_lindolpho_box_of_ephemera.png">
                             </div>
                         </a>
                     </div>
@@ -105,7 +105,14 @@
                     <div class="col">
                         <a href="projects/discobear.html">
                             <div class="card shadow">
-                                <img src="images/thumbnails/thumbnail_projects_disco_bear.png" class="card-img" alt="thumbnail_projects_stepstone_island.png">
+                                <img src="images/thumbnails/thumbnail_projects_disco_bear.png" class="card-img" alt="thumbnail_projects_disco_bear.png">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a href="projects/duos.html">
+                            <div class="card shadow">
+                                <img src="images/thumbnails/thumbnail_projects_duos.png" class="card-img" alt="thumbnail_projects_duos.png">
                             </div>
                         </a>
                     </div>
