--- a/projects/discobear.html
+++ b/projects/discobear.html
@@ -45,8 +45,8 @@
         <div class="container my-5">
             <main>
                 <div class="row">
-                    <div class="col-2">
-                        <div class="sticky-top d-none d-lg-block border-end">
+                    <div class="col-2 d-none d-lg-block">
+                        <div class="sticky-top border-end">
                             <div class="fw-bold py-3">Page Contents</div>
                             <nav id="navbar-tableofcontents" class="flex-column align-items-stretch pe-4">
                                 <nav class="nav nav-pills flex-column">
@@ -65,7 +65,7 @@
                         </div>
                     </div>
 
-                    <div class="col col-lg-10" data-bs-spy="scroll" data-bs-target="#navbar-tableofcontents" data-bs-smooth-scroll="true" class="scrollspy-example-2" tabindex="0">
+                    <div class="col col-lg-10 col-sm-12" data-bs-spy="scroll" data-bs-target="#navbar-tableofcontents" data-bs-smooth-scroll="true" class="scrollspy-example-2" tabindex="0">
                         <div id="overview" class="container mb-3 pb-3">
                             <div class="row mt-2">
                                 <div class="col">
