Added the pipeline game project card on index.html

--- a/index.html
+++ b/index.html
@@ -116,6 +116,13 @@
                             </div>
                         </a>
                     </div>
+                    <div class="col">
+                        <a href="projects/stepstoneisland.html">
+                            <div class="card shadow">
+                                <img src="images/thumbnails/thumbnail_projects_the_pipeline_game.png" class="card-img" alt="thumbnail_projects_the_pipeline_game.png">
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </main>
