Added captions to some disco bear images.
* Adjusted spacing

--- a/projects/discobear.html
+++ b/projects/discobear.html
@@ -231,27 +231,28 @@
                                         any bears and were very disappointed.
                                     </p>
                                 </div>
-                                <div class="row">
+                                <div class="row row-cols-1 row-cols-lg-3 g-2 g-lg-3">
                                     <div class="col">
                                         <a href="../images/projects/discobear/narrative_01.jpeg" data-toggle="lightbox" data-gallery="narrative-gallery">
                                             <img src="../images/projects/discobear/thumbnails/thumbnail_narrative_01.png" class="img-fluid rounded" alt="narrative_01.jpeg"/>
                                         </a>
+                                        <figcaption class="figure-caption text-center py-3">Developing Disco Bear in the Unity Game Engine.</figcaption>
                                     </div>
                                     <div class="col">
                                         <a href="../images/projects/discobear/narrative_03.png" data-toggle="lightbox" data-gallery="narrative-gallery">
                                             <img src="../images/projects/discobear/thumbnails/thumbnail_narrative_03.png" class="img-fluid rounded" alt="narrative_03.png">
                                         </a>
-                                        <figcaption class="figure-caption text-center py-3">Early concepts of the characters (by Steven Sugar).</figcaption>
+                                        <figcaption class="figure-caption text-center py-3">A screenshot of the Disco Bear macro document.</figcaption>
                                     </div>
                                     <div class="col">
                                         <a href="../images/projects/discobear/narrative_02.jpeg" data-toggle="lightbox" data-gallery="narrative-gallery">
                                             <img src="../images/projects/discobear/thumbnails/thumbnail_narrative_02.png" class="img-fluid rounded" alt="narrative_02.jpeg">
                                         </a>
-                                        <figcaption class="figure-caption text-center py-3">Early concepts of the characters (by Steven Sugar).</figcaption>
+                                        <figcaption class="figure-caption text-center py-3">Sequencing our part three of the narrative with roughly drawn thumbnails.</figcaption>
                                     </div>
                                 </div>
                             </div>
-                            <div id="dd-music-and-sound" class="row row-cols-2 g-2 g-lg-3 py-3">
+                            <div id="dd-music-and-sound" class="row row-cols-1 row-cols-lg-2 g-2 g-lg-3 py-3">
                                 <div class="col">
                                     <h3 class="pb-3">Music & Sound</h3>
                                     <p>
@@ -333,7 +334,7 @@
                                         setting.
                                     </p>
                                 </div>
-                                <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3 pt-3 pb-5">
+                                <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3 pb-5">
                                     <div class="col">
                                         <a href="../images/projects/discobear/presentation_01.jpeg" data-toggle="lightbox" data-gallery="presentation-gallery">
                                             <img src="../images/projects/discobear/thumbnails/thumbnail_presentation_01.png" class="img-fluid rounded" alt="presentation_01.jpeg">
