Adjusted index.html spacing between screen sizes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <h1>Professional Projects</h1>
                     <h3 class="text-body-secondary fw-light fst-italic ">Released projects that I have contributed to at various studios.</h3>
                 </div>
-                <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="row row-cols-2 row-cols-lg-3 g-2 g-lg-3">
                     <div class="col">
                         <a href="projects/stepstoneisland.html">
                             <div class="card shadow">
@@ -87,7 +87,7 @@
                     <h1>Personal Projects</h1>
                     <h3 class="text-body-secondary fw-light fst-italic ">Old student projects, game jam games, etc.</h3>
                 </div>
-                <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="row row-cols-2 row-cols-lg-3 g-2 g-lg-3">
                     <div class="col">
                         <a href="#">
                             <div class="card shadow">
