--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Katie Pustolski's Portfolio" />
-    <meta name="author" content="Katie Pustolski" />
-    <title>Katie Pustolski's Portfolio</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
-      crossorigin="anonymous"
-    />
-    <link href="css/style.css" rel="stylesheet" />
-
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="description" content="Katie Pustolski's Portfolio" />
+        <meta name="author" content="Katie Pustolski" />
+        <title>Katie Pustolski's Portfolio</title>
+        <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+        crossorigin="anonymous"
+        />
+        <link href="css/style.css" rel="stylesheet" />
         <script src="js/colorpicker.js"></script>
-  </head>
+    </head>
 
   <body>
+    <!-- Symbols -->
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
         <symbol id="checkmark" viewBox="0 0 16 16"> 
             <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"></path>
