--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         </a>
                     </div>
                     <div class="col">
-                        <a href="projects/stepstoneisland.html">
+                        <a href="projects/pipelinegame.html">
                             <div class="card shadow">
                                 <img src="images/thumbnails/thumbnail_projects_the_pipeline_game.png" class="card-img" alt="thumbnail_projects_the_pipeline_game.png">
                             </div>
