Updated Stepstone Island overview section
* Uses poster and indiecade 2018 badge

--- a/projects/stepstoneisland.html
+++ b/projects/stepstoneisland.html
@@ -143,7 +143,14 @@
                     <div class="col col-lg-10 col-sm-12" data-bs-spy="scroll" data-bs-target="#navbar-tableofcontents" data-bs-smooth-scroll="true" tabindex="0">
                         <div id="overview" class="container mb-3 pb-3">
                             <div class="row mt-2">
-                                <div class="display-3 mb-3">Stepstone Island</div>
+                            <div class="row mt-2">
+                                <div class="col">
+                                    <div class="display-3 mb-3">Stepstone Island</div>
+                                </div>
+                                <div class="col mx-2">
+                                        <img src="../images/badges/2018_selection_seal_orange_250x250px.png" width="100px" class="float-end" alt="2018_selection_seal_orange_250x250px.png"/>
+                                 </div>
+                            </div>
                             </div>
                             <div class="row py-3">
                                 <div class="col-md-6">
@@ -167,8 +174,8 @@
                                     </div> -->
                                 </div>
                                 <div class="col">
-                                    <a href="../images/projects/stepstoneisland/iphone5s_gold_portrait.jpeg" data-toggle="lightbox">
-                                        <img src="../images/projects/stepstoneisland/iphone5s_gold_portrait.jpeg" class="img-fluid mx-auto d-block rounded" alt="iphone5s_gold_portrait.jpeg" width="500"/>
+                                    <a href="../images/projects/stepstoneisland/stepstone_island_poster_720x960.png" data-toggle="lightbox">
+                                        <img src="../images/projects/stepstoneisland/stepstone_island_poster_720x960.png" class="img-fluid mx-auto d-block rounded" alt="stepstone_island_poster_720x960.png" width="400"/>
                                     </a>
                                 </div>
                             </div>
