Removed copy-write symbol from footers

--- a/about.html
+++ b/about.html
@@ -157,7 +157,7 @@
         <div class="container">
         <footer class="text-muted bg-greyLightBlue">
                 <div class="d-flex justify-content-center">
-            <p class="smallText">© Katie Pustolski 2025</p>
+            <p class="smallText">Katie Pustolski 2025</p>
             <div>
         </footer>
         </div>
