--- a/projects/duos.html
+++ b/projects/duos.html
@@ -280,7 +280,7 @@
         <div class="col py-3 my-4">
             <footer class="text-muted bg-greyLightBlue">
                 <div class="d-flex justify-content-center">
-                    <p class="smallText">© Katie Pustolski 2025</p>
+                    <p class="smallText">Katie Pustolski 2025</p>
                 <div>
             </footer>
         </div>
