Added lindolphos box page

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </div>
                 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-2 g-lg-3">
                     <div class="col">
-                        <a href="#">
+                        <a href="projects/lindolphosboxofephemera.html">
                             <div class="card shadow">
                                 <img src="images/thumbnails/thumbnail_projects_lindolpho_box_of_ephemera.png" class="card-img" alt="thumbnail_projects_lindolpho_box_of_ephemera.png">
                             </div>
