--- a/projects/duos.html
+++ b/projects/duos.html
@@ -116,8 +116,8 @@
         <div class="container my-5">
             <main>
                 <div class="row">
-                    <div class="col-2">
-                        <div class="sticky-top d-none d-lg-block border-end">
+                    <div class="col-2 d-none d-lg-block">
+                        <div class="sticky-top border-end">
                             <div class="fw-bold py-3">Page Contents</div>
                             <nav id="navbar-tableofcontents" class="flex-column align-items-stretch pe-4">
                                 <nav class="nav nav-pills flex-column">
